# yuma123

./: .gitignore  .travis.yml  CHANGELOG  Dockerfile  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  configure.in  git_add.txt
example-modules/aether-xcvr/: Makefile.am  README  aether-packet-xcvr.h  aether-packet-xcvr@2024-10-31.c  configure.ac
example-modules/chat/: Makefile.am  chat.c  chat.yang  configure.ac
example-modules/external-handler/: Makefile.am  README  configure.ac  external-handler.c  my_commit_prog.py  my_get_cb_schema_map.txt  my_get_prog
example-modules/geo-location/: Makefile.am  configure.ac  geo-location.c  geo-location.yang  get-geo-location
example-modules/helloworld/: Makefile.am  configure.ac  helloworld.c  helloworld.yang
example-modules/ietf-alarms/: Makefile.am  alarmctrl.c  alarmctrl.h  alarms-interfaces.yang  configure.ac  ietf-alarms-x733@2016-10-05.yang  ietf-alarms.c  ietf-alarms@2016-10-05.yang  ietf-alarms@2016-10-27.yang
example-modules/ietf-interfaces/: Makefile.am  README  configure.ac  get-interface-ipv4  ietf-interfaces-w-nmda.c  ietf-interfaces.c  interfaces-alarms.c  interfaces-alarms.yang
example-modules/ietf-interfaces/debian/: changelog  control
example-modules/ietf-network-bridge/: Makefile.am  README  configure.ac  example-bridge-cfg.xml  example-bridge.yang  ietf-network-bridge-openflow.c  ietf-network-bridge.c  ovs-ofctl-utils.h
example-modules/ietf-network-bridge/debian/: changelog  control  copyright  rules
example-modules/ietf-system/: Makefile.am  configure.ac  ietf-system.c
example-modules/ietf-system/debian/: changelog  control  copyright  netconfd-module-ietf-system.install  rules
example-modules/ietf-traffic-generator/: Makefile.am  README  configure.ac  dict.c  dict.h  ietf-traffic-analyzer.c  ietf-traffic-generator.c  libtraffic-analyzer.c  libtraffic-analyzer.h  libtraffic-generator.c  libtraffic-generator.h  raw-socket.c  raw-socket.h  timespec-math.c  timespec-math.h  timespec_math.c  traffic-analyzer.c  traffic-generator-make-testframe.c  traffic-generator-testframe.yang  traffic-generator.c  yang-date-and-time.c  yang-date-and-time.h
example-modules/ietf-traffic-generator/debian/: changelog  control  copyright  netconfd-module-ietf-traffic-analyzer.install  netconfd-module-ietf-traffic-generator.install  traffic-analyzer-cli-rawsocket.install  traffic-generator-cli-rawsocket.install  traffic-generator-make-testframe.install
example-modules/ietf-traffic-generator/pcap2tg/: traffic-pcap.py
example-modules/ietf-traffic-generator/tg2pcap/: README  traffic-tg.xml
example-modules/interfaces-alarms/: Makefile.am  README  configure.ac  interfaces-alarms.c  interfaces-notifications.yang
example-modules/netconfd-instance-manager/: Makefile.am  configure.ac  netconfd-instance-manager.c  yuma123-services-netconfd.yang  yuma123-services.yang
example-modules/yangcli-to-rpc/: Makefile.am  README  configure.ac  yangcli-to-rpc.c  yuma123-yangcli-to-rpc.yang
example-modules/yuma-arp/: Makefile.am  README  configure.ac  yuma-arp.c  yuma-arp.h
libintri/private/: Makefile.am  intri-device.c  intri-device.h  intri-device.yang  yangc.import  yangh.import
libintri/private/intri-device/: Makefile.am  intri-device.c  intri-device.h  intri-device.yang  yangdump.tmp
libintri/private/intri-test/: Makefile.am  intri-test.c  intri-test.yang
libintri/private/modules/: Makefile.am  Makefile.in  yang.import.path
libstandard/ietf-interfaces/: Makefile.am  configure.ac  ietf-interfaces.c
libstandard/ietf-interfaces/debian/: control
libstandard/ietf-ip/: Makefile.am  README  configure.ac  ietf-ip.c
libstandard/ietf-ip/debian/: copyright
libstandard/ietf-system/: Makefile.am  README  configure.ac
libstandard/ietf-system/debian/: changelog  control
libtecla/: Makefile  Makefile.am  Makefile.in  configure  demo  demo.c  demo2  demo2_r  demo3  demo3_r  demo_r  enhance
libtoaster/src/: Makefile  Makefile.am  toaster.c  toaster.h
netconf/modules/: Makefile  Makefile.am
netconf/modules/draft/: ietf-direct-must-augment-extension@2015-06-09.yang
netconf/modules/ietf/: AGENTX-MIB.yang  DIFFSERV-MIB.yang  DISMAN-EVENT-MIB.yang  DISMAN-SCHEDULE-MIB.yang  DISMAN-SCRIPT-MIB.yang  ENTITY-MIB.yang  ENTITY-SENSOR-MIB.yang  ENTITY-STATE-MIB.yang  EtherLike-MIB.yang  HCNUM-TC.yang  HOST-RESOURCES-MIB.yang  IF-INVERTED-STACK-MIB.yang  IF-MIB.yang  INTEGRATED-SERVICES-MIB.yang  IP-FORWARD-MIB.yang  IP-MIB.yang  NETWORK-SERVICES-MIB.yang  NOTIFICATION-LOG-MIB.yang  RMON-MIB.yang  SNMP-COMMUNITY-MIB.yang  SNMP-MPD-MIB.yang  SNMP-NOTIFICATION-MIB.yang  SNMP-PROXY-MIB.yang  SNMP-TARGET-MIB.yang  SNMP-USER-BASED-SM-MIB.yang  SNMP-USM-DH-OBJECTS-MIB.yang  SNMP-VIEW-BASED-ACM-MIB.yang  iana-afn-safi.yang  iana-if-type.yang  ietf-interfaces.yang  ietf-ipfix-psamp.yang  ietf-ipv4-unicast-routing.yang  ietf-netconf-acm.yang  ietf-netconf-monitoring.yang  ietf-netconf-nmda@2019-01-07.yang  ietf-netconf-partial-lock.yang  ietf-netconf-state.yang  ietf-netconf-system-notifications.yang  ietf-netconf-with-defaults.yang  ietf-netconf.yang  (+9 more)
netconf/modules/ietf-draft/: ietf-if-ethernet-like.yang  ietf-if-extensions.yang  ietf-network-bridge-scheduler-state.yang  ietf-network-bridge-scheduler.yang  ietf-network-topology@2016-11-30.yang  ietf-network@2016-11-30.yang  ietf-traffic-analyzer.yang  ietf-traffic-generator.yang
netconf/modules/ietf-patched/: ietf-netconf-datastores@2017-08-24.yang
netconf/modules/netconfcentral/: nacm.yang  ncx.yang  ncxtypes.ncx  ncxtypes.yang  netconfd.yang  sessions.yang  toaster.yang  verified-commit.yang  yangcli.yang  yangdiff.ncx  yangdiff.yang  yangdump.ncx  yangdump.yang  yuma-app-common.yang  yuma-arp.yang  yuma-interfaces.yang  yuma-mysession.yang  yuma-nacm.yang  yuma-ncx.yang  yuma-netconf.yang  yuma-proc.yang  yuma-system.yang  yuma-types.yang  yuma-xsd.yang
netconf/modules/test/: test.yang  (+32 more)
netconf/python/: Makefile.am  README  configure.ac  setup.py  yangrpc.c  yuma.c
netconf/systemd/: Makefile.am  configure.ac  sshd_config  startup-cfg.xml
(+3057 files in other folders)
