SUBDIRS=\
libtecla \
netconf/src/mgr \
netconf/src/agt \
netconf/src/ncx \
netconf/src/netconfd \
netconf/src/subsys \
netconf/src/yangcli \
libtoaster/src \
netconf/modules \
example-modules/helloworld \
netconf/src/yangrpc \
netconf/src/yangrpc/example \
netconf/src/yangdump \
netconf/src/yangdiff \
netconf/man

#netconf/test

#netconf/src/yangrpc/yanghttpd


platform_netconf_include_HEADERS= \
$(top_srcdir)/netconf/src/platform/procdefs.h

ncx_netconf_include_HEADERS= \
$(top_srcdir)/netconf/src/ncx/ncxconst.h \
$(top_srcdir)/netconf/src/ncx/val_util.h \
$(top_srcdir)/netconf/src/ncx/getcb.h \
$(top_srcdir)/netconf/src/ncx/rpc_err.h \
$(top_srcdir)/netconf/src/ncx/yinyang.h \
$(top_srcdir)/netconf/src/ncx/ncx.h \
$(top_srcdir)/netconf/src/ncx/bobhash.h \
$(top_srcdir)/netconf/src/ncx/log.h \
$(top_srcdir)/netconf/src/ncx/grp.h \
$(top_srcdir)/netconf/src/ncx/tstamp.h \
$(top_srcdir)/netconf/src/ncx/xpath_yang.h \
$(top_srcdir)/netconf/src/ncx/status.h \
$(top_srcdir)/netconf/src/ncx/yang_obj.h \
$(top_srcdir)/netconf/src/ncx/ncx_str.h \
$(top_srcdir)/netconf/src/ncx/yang_ext.h \
$(top_srcdir)/netconf/src/ncx/conf.h \
$(top_srcdir)/netconf/src/ncx/b64.h \
$(top_srcdir)/netconf/src/ncx/ncxmod.h \
$(top_srcdir)/netconf/src/ncx/top.h \
$(top_srcdir)/netconf/src/ncx/obj.h \
$(top_srcdir)/netconf/src/ncx/json_wr.h \
$(top_srcdir)/netconf/src/ncx/xml_wr.h \
$(top_srcdir)/netconf/src/ncx/xml_rd.h \
$(top_srcdir)/netconf/src/ncx/def_reg.h \
$(top_srcdir)/netconf/src/ncx/ncx_num.h \
$(top_srcdir)/netconf/src/ncx/op.h \
$(top_srcdir)/netconf/src/ncx/xpath1.h \
$(top_srcdir)/netconf/src/ncx/ses.h \
$(top_srcdir)/netconf/src/ncx/yin.h \
$(top_srcdir)/netconf/src/ncx/runstack.h \
$(top_srcdir)/netconf/src/ncx/val.h \
$(top_srcdir)/netconf/src/ncx/val_set_cplxval_obj.h \
$(top_srcdir)/netconf/src/ncx/val_get_leafref_targval.h \
$(top_srcdir)/netconf/src/ncx/version.h \
$(top_srcdir)/netconf/src/ncx/ext.h \
$(top_srcdir)/netconf/src/ncx/yangconst.h \
$(top_srcdir)/netconf/src/ncx/yang.h \
$(top_srcdir)/netconf/src/ncx/send_buff.h \
$(top_srcdir)/netconf/src/ncx/plock.h \
$(top_srcdir)/netconf/src/ncx/ncx_list.h \
$(top_srcdir)/netconf/src/ncx/ncxtypes.h \
$(top_srcdir)/netconf/src/ncx/xmlns.h \
$(top_srcdir)/netconf/src/ncx/yang_typ.h \
$(top_srcdir)/netconf/src/ncx/tk.h \
$(top_srcdir)/netconf/src/ncx/cli.h \
$(top_srcdir)/netconf/src/ncx/plock_cb.h \
$(top_srcdir)/netconf/src/ncx/dlq.h \
$(top_srcdir)/netconf/src/ncx/ncx_feature.h \
$(top_srcdir)/netconf/src/ncx/var.h \
$(top_srcdir)/netconf/src/ncx/blob.h \
$(top_srcdir)/netconf/src/ncx/obj_help.h \
$(top_srcdir)/netconf/src/ncx/xml_msg.h \
$(top_srcdir)/netconf/src/ncx/cap.h \
$(top_srcdir)/netconf/src/ncx/yang_grp.h \
$(top_srcdir)/netconf/src/ncx/typ.h \
$(top_srcdir)/netconf/src/ncx/xpath.h \
$(top_srcdir)/netconf/src/ncx/ses_msg.h \
$(top_srcdir)/netconf/src/ncx/ncx_appinfo.h \
$(top_srcdir)/netconf/src/ncx/xml_util.h \
$(top_srcdir)/netconf/src/ncx/xpath_wr.h \
$(top_srcdir)/netconf/src/ncx/rpc.h \
$(top_srcdir)/netconf/src/ncx/xml_val.h \
$(top_srcdir)/netconf/src/ncx/cfg.h \
$(top_srcdir)/netconf/src/ncx/help.h \
$(top_srcdir)/netconf/src/ncx/yang_parse.h \
$(top_srcdir)/netconf/src/ncx/libncx.h \
$(top_srcdir)/netconf/src/ncx/val123.h

agt_netconf_include_HEADERS= \
$(top_srcdir)/netconf/src/agt/agt_val_parse.h \
$(top_srcdir)/netconf/src/agt/agt_rpcerr.h \
$(top_srcdir)/netconf/src/agt/agt_connect.h \
$(top_srcdir)/netconf/src/agt/agt_rpc.h \
$(top_srcdir)/netconf/src/agt/agt_cb.h \
$(top_srcdir)/netconf/src/agt/agt_hello.h \
$(top_srcdir)/netconf/src/agt/agt_acm.h \
$(top_srcdir)/netconf/src/agt/agt_sys.h \
$(top_srcdir)/netconf/src/agt/agt_xml.h \
$(top_srcdir)/netconf/src/agt/agt_ncxserver.h \
$(top_srcdir)/netconf/src/agt/agt_if.h \
$(top_srcdir)/netconf/src/agt/agt_tree.h \
$(top_srcdir)/netconf/src/agt/agt_ncx.h \
$(top_srcdir)/netconf/src/agt/agt_state.h \
$(top_srcdir)/netconf/src/agt/agt_time_filter.h \
$(top_srcdir)/netconf/src/agt/agt_cap.h \
$(top_srcdir)/netconf/src/agt/agt_plock.h \
$(top_srcdir)/netconf/src/agt/agt_signal.h \
$(top_srcdir)/netconf/src/agt/agt_val.h \
$(top_srcdir)/netconf/src/agt/agt_xpath.h \
$(top_srcdir)/netconf/src/agt/agt_proc.h \
$(top_srcdir)/netconf/src/agt/agt_not.h \
$(top_srcdir)/netconf/src/agt/agt_timer.h \
$(top_srcdir)/netconf/src/agt/agt_util.h \
$(top_srcdir)/netconf/src/agt/agt_ses.h \
$(top_srcdir)/netconf/src/agt/agt.h \
$(top_srcdir)/netconf/src/agt/agt_top.h \
$(top_srcdir)/netconf/src/agt/agt_cli.h \
$(top_srcdir)/netconf/src/agt/agt_commit_complete.h \
$(top_srcdir)/netconf/src/agt/agt_commit_validate.h \
$(top_srcdir)/netconf/src/agt/agt_not_queue_notification_cb.h

mgr_netconf_include_HEADERS= \
$(top_srcdir)/netconf/src/mgr/mgr.h \
$(top_srcdir)/netconf/src/mgr/mgr_hello.h \
$(top_srcdir)/netconf/src/mgr/mgr_io.h \
$(top_srcdir)/netconf/src/mgr/mgr_not.h \
$(top_srcdir)/netconf/src/mgr/mgr_rpc.h \
$(top_srcdir)/netconf/src/mgr/mgr_ses.h

yangrpc_netconf_include_HEADERS= \
$(top_srcdir)/netconf/src/yangrpc/yangrpc.h

