AC_INIT(src/yangcli/yangcli.c)

AM_INIT_AUTOMAKE(yuma,1.14)

AM_CONFIG_HEADER(include/config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_CC_C_O

AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h inttypes.h malloc.h netdb.h netinet/in.h netinet/in_systm.h stdint.h stdlib.h string.h strings.h sys/param.h sys/queue.h sys/socket.h sys/select.h sys/time.h unistd.h values.h])

AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

AC_CHECK_LIB([dl], [dlopen], DL_LIBS="$DL_LIBS -ldl")

dnl config parameter for non-standard install location
AC_ARG_WITH([ssh2], [AS_HELP_STRING([--with-ssh2=prefix],
    [use this for a non-standard install prefix of the ssh2 library])],
    [],
    [with_ssh2=try])

if test "$with_ssh2" != "no" ; then
	LIBSSH2_CFLAGS="-I$with_ssh2/include"
	LIBSSH2_LDFLAGS="-L$with_ssh2/lib"
	LIBS="-lssh2 $LIBS"
	AC_SUBST([LIBSSH2_CFLAGS])
	AC_SUBST([LIBSSH2_LIBS])
fi

if test "$with_ssh2" = "try" ; then
   AC_CHECK_LIB([ssh2], [libssh2_session_init_ex], [SSH2_LIBS="-lssh2"],
			[SSH2_NOT_FOUND=1])

   if test "$SSH2_NOT_FOUND" = "1" ; then
      AC_MSG_NOTICE([])
      AC_MSG_NOTICE([The libssh2 library was not found!])
      AC_MSG_ERROR([This library is required; can't continue])
   fi
fi

dnl Check for LibXML
AC_PATH_PROG([xml2_config], [xml2-config], [no]) 
  
AC_MSG_CHECKING(for LibXML) 
  
if test "$xml2_config" != "no"; then
	LIBXML_CFLAGS=`$xml2_config --cflags`
	LIBXML_LIBS=`$xml2_config --libs`
	LIBS="$LIBXML_LIBS $LIBS"
	AC_MSG_RESULT(yes)
else
	AC_MSG_RESULT(no)
fi 

AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)

AM_CONDITIONAL(HAVE_LIBXML, test "${LIBXML_CFLAGS}" != "")

AC_CONFIG_SUBDIRS(libtecla)

AC_OUTPUT(Makefile src/agt/Makefile src/mgr/Makefile src/ncx/Makefile src/netconfd/Makefile src/subsys/Makefile src/yangcli/Makefile src/yangdiff/Makefile src/yangdump/Makefile src/ydump/Makefile)