netconfmodule_LTLIBRARIES = libexternal-handler.la

libexternal_handler_la_SOURCES = \
external-handler.c

libexternal_handler_la_CPPFLAGS = -I${includedir}/yuma/agt -I${includedir}/yuma/mgr -I${includedir}/yuma/ncx -I${includedir}/yuma/platform
libexternal_handler_la_LDFLAGS = -module -lyumaagt -lyumancx
