netconfmodule_LTLIBRARIES = libietf-system.la

libietf_system_la_SOURCES = \
ietf-system.c

libietf_system_la_CPPFLAGS = -I${includedir}/yuma/agt -I${includedir}/yuma/mgr -I${includedir}/yuma/ncx -I${includedir}/yuma/platform -I${includedir}/libxml2 -I${includedir}/libxml2/libxml
libietf_system_la_LDFLAGS = -module -lyumaagt -lyumancx -lxml2 -lz -ldl

#yang_DATA = ietf-system.yang
